--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,20 @@
 save-prefix = ~
 proprietary-attribs = false
 legacy-bundling = true
+Schwab Advisor Portfolio Connect (i.e. PC or Portfolio Connect) is the “next generation” of the Portfolio Center desktop (PCD) product 
+>3000 independent Investment Advisor firms use PCD for portfolio management & reporting today.
+The PC project started with POC work in 2013 and platform build out in 2014.
+Team built the infrastructure and significant functionality and even started to “beta test" the platform with a handful of advisors.  
+Portfolio Connect is a very high priority for Advisor Services….but SIP/IIP (Hg) temporarily shifted the focus:
+SIP/IIP project was built on the platform we started to build for Portfolio Connect.
+All Dev/QA resources have been were diverted to help Hg for 9-12 months starting in mid 2014.  
+Most of the AS project portfolio funding ($) will be focused on this effort in 2015 and 2016!!
+We restarted the project in mid May 2015 by establishing new teams with many new people but seeded with experienced resources.
+
+Portfolio Connect is a new approach to portfolio management designed to give RIAs a platform that enhances their differentiation and enables scale, particularly for Schwab custodied assets
+
+Key Features of Portfolio Connect
+Robust, highly-efficient platform designed to scale for Schwab and RIA growth
+Schwab “custodial direct” integration to dramatically reduce data operations for Schwab custodied assets
+User experience optimized for today’s advisor–client interaction model: real-time, dynamic, multi-channel presentation capabilities (web, tablet, print)
+Easy integration with key advisor technology platforms and business processes
